@@ -34,28 +34,12 @@ portable, and easily embeddable.
 @page SourceDistro Source Distribution
 
 You can retrieve the source to ENet by downloading it in either .tar.gz form
-or accessing the cvs distribution directly.
+or accessing the github distribution directly.
 
-The most recent stable release (1.3.5) can be downloaded <a href="http://enet.bespin.org/download/enet-1.3.5.tar.gz">here</a>. 
+The most recent stable release (1.3.6) can be downloaded <a href="http://enet.bespin.org/download/enet-1.3.6.tar.gz">here</a>. 
 The last release that is protocol compatible with the 1.2 series or earlier (1.2.5) can be downloaded <a href="http://enet.bespin.org/download/enet-1.2.5.tar.gz">here</a> 
 
-To access ENet via anonymous CVS, you must use the CVSROOT
-:pserver:anonymous\@bespin.org:/var/lib/cvs/enet with an empty
-password.
-
-@code
-	$ cvs -z3 -d :pserver:anonymous@bespin.org:/var/lib/cvs/enet login
-@endcode
-	Hit the return key when prompted for a password.
-@code
-	$ cvs -z3 -d :pserver:anonymous@bespin.org:/var/lib/cvs/enet co -l .
-	$ cvs -z3 co enet
-@endcode
-
-This will create a CVS directory in the current directory, and with
-the second command will proceed to check the enet module out of CVS.
-Any problems with CVS access or request for write access should be
-sent via email to @ref MailingList.
+You can find the most recent ENet source at <a href="https://github.com/lsalzman/enet">the github repository</a>.
 
 */
 
